--- a/sell/src/main/res/layout/checks_history_list_item.xml
+++ b/sell/src/main/res/layout/checks_history_list_item.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
-    app:cardElevation="8dp">
+    app:cardElevation="@dimen/margin_8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/black"
         android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingEnd="1dp">
+        android:paddingStart="@dimen/margin_16dp"
+        android:paddingEnd="@dimen/margin_0dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_header"
