--- a/sell/src/main/res/layout/side_menu_sell_main.xml
+++ b/sell/src/main/res/layout/side_menu_sell_main.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="@dimen/margin_16dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:clickable="false"
-    android:focusable="false">
+    android:focusable="false"
+    android:orientation="vertical"
+    android:padding="@dimen/margin_16dp">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:textColor="@color/grey"
-        android:textSize="@dimen/text_14sp"
         android:text="@string/text_shift_opening"
-        />
+        android:textColor="@color/grey"
+        android:textSize="@dimen/text_14sp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_2dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_20sp"
         android:text="@string/text_date_opening"
-        />
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_20sp" />
 
     <Button
         android:id="@+id/sell_main_menu_item_sale"
+        style="@style/GreenButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
@@ -37,10 +38,11 @@
         android:layout_marginRight="@dimen/margin_16dp"
         android:paddingTop="@dimen/margin_14dp"
         android:paddingBottom="@dimen/margin_14dp"
-        style="@style/GreenButtonStyle"
         android:text="@string/text_sale" />
+
     <Button
         android:id="@+id/sell_main_menu_item_return"
+        style="@style/OrangeButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
@@ -48,7 +50,6 @@
         android:layout_marginRight="@dimen/margin_16dp"
         android:paddingTop="@dimen/margin_14dp"
         android:paddingBottom="@dimen/margin_14dp"
-        style="@style/OrangeButtonStyle"
         android:text="@string/text_return" />
 
     <kg.nurtelecom.ofd.cell.CellView
@@ -58,8 +59,9 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        app:title="@string/main_greeting"
-        app:showArrowIcon="true" />
+        app:showArrowIcon="true"
+        app:title="@string/main_greeting" />
+
     <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_report"
         android:layout_width="match_parent"
@@ -67,18 +69,20 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        app:title="@string/text_report"
+        app:showArrowIcon="true"
         app:subTitle="@string/text_interim_report"
-        app:showArrowIcon="true" />
+        app:title="@string/text_report" />
+
     <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        app:title="@string/text_history"
+        app:showArrowIcon="true"
         app:subTitle="@string/text_history_list"
-        app:showArrowIcon="true" />
+        app:title="@string/text_history" />
+
     <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_information"
         android:layout_width="match_parent"
@@ -86,19 +90,19 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        app:title="@string/text_information"
-        app:showArrowIcon="true" />
+        app:showArrowIcon="true"
+        app:title="@string/text_information" />
+
     <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_operations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_8dp"
-        app:title="@string/text_operations"
-        app:subTitle="@string/text_operations_list"
+        android:layout_marginRight="@dimen/margin_16dp"
         app:showArrowIcon="true"
-        />
+        app:subTitle="@string/text_operations_list"
+        app:title="@string/text_operations" />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -106,12 +110,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_25dp"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginRight="@dimen/margin_16dp"
         android:background="@null"
+        android:text="@string/text_shift_closing_and_report"
         android:textColor="@color/red"
-        android:textSize="@dimen/text_14sp"
-        android:text="@string/text_shift_closing_and_report" />
-
+        android:textSize="@dimen/text_14sp" />
 
 </LinearLayout>
