--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:id="@+id/container"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:fitsSystemWindows="true">
 
     <kg.nurtelecom.ofd.toolbar.MainToolbar
         android:id="@+id/tb_sell_main"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:background="@color/black"
         android:fitsSystemWindows="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/black"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
@@ -34,18 +34,17 @@
             android:layout_height="match_parent" />
 
         <com.google.android.material.navigation.NavigationView
-            android:clickable="false"
-            android:focusable="false"
             android:id="@+id/nav_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_marginEnd="-65dp"
             android:background="@color/black"
+            android:clickable="false"
             android:fitsSystemWindows="true"
+            android:focusable="false"
             app:headerLayout="@layout/side_menu_sell_main"
             app:itemIconTint="#fff" />
+
     </androidx.drawerlayout.widget.DrawerLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
