--- a/ui/src/main/res/layout/detail_view.xml
+++ b/ui/src/main/res/layout/detail_view.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_4dp"
-                android:src="@drawable/ic_baseline_check_circle_24"
+                android:src="@drawable/ic_green_check"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
