--- a/ui/src/main/res/layout/info_card_cell_view.xml
+++ b/ui/src/main/res/layout/info_card_cell_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mcv_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -41,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/next_icon_description"
-            android:src="@drawable/ic_baseline_arrow_right_alt_24"
+            android:src="@drawable/ic_arrow_right"
             android:visibility="gone"
             android:layout_marginEnd="@dimen/margin_8dp"
             app:layout_constraintBottom_toBottomOf="parent"
