--- a/sell/src/main/res/layout/checks_history_list_item.xml
+++ b/sell/src/main/res/layout/checks_history_list_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
-    app:cardElevation="@dimen/margin_8dp">
+    app:cardElevation="@dimen/margin_8dp"
+    android:id="@+id/root">
 
     <LinearLayout
         android:layout_width="match_parent"
