--- a/ui/src/main/res/values/attrs.xml
+++ b/ui/src/main/res/values/attrs.xml
@@ -30,11 +30,7 @@
     </declare-styleable>
 
     <declare-styleable name="EditTextField">
-        <attr name="textInputType" format="enum">
-            <enum name="text" value="0"/>
-            <enum name="number" value="1"/>
-            <enum name="password" value="2"/>
-        </attr>
+        <attr name="android:inputType" />
         <attr name="hint_text"/>
         <attr name="text" format="string"/>
         <attr name="error_text" format="string"/>
