--- a/auth/src/main/res/layout/auth_activity.xml
+++ b/auth/src/main/res/layout/auth_activity.xml
@@ -9,34 +9,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
         <kg.nurtelecom.ofd.edittext.EditTextField
             android:id="@+id/et_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
-            app:hint_text="@string/ed_login"
             android:inputType="text"
-            />
+            app:hint_text="@string/ed_login" />
 
         <kg.nurtelecom.ofd.edittext.EditTextField
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
-            app:hint_text="@string/ed_password"
             android:inputType="textPassword"
-             />
+            app:hint_text="@string/ed_password" />
 
         <kg.nurtelecom.ofd.edittext.EditTextField
             android:id="@+id/et_gsr_key"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16dp"
-            app:hint_text="@string/ed_gsr_key"
-            android:inputType="number"/>
+            android:inputType="number"
+            app:hint_text="@string/ed_gsr_key" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,9 +47,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_16dp"
-                android:textColor="@color/white"
                 android:text="@string/tv_regime"
-                android:textSize="@dimen/text_16sp"/>
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_16sp" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/switch_fiscal_regime"
@@ -64,6 +62,7 @@
 
         <Button
             android:id="@+id/btn_login"
+            style="@style/GreenButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_16dp"
@@ -71,7 +70,6 @@
             android:layout_marginRight="@dimen/margin_16dp"
             android:paddingTop="@dimen/margin_14dp"
             android:paddingBottom="@dimen/margin_14dp"
-            style="@style/GreenButtonStyle"
             android:text="@string/btn_login" />
 
     </LinearLayout>
