--- a/sell/src/main/res/layout/checks_history_details_component_view.xml
+++ b/sell/src/main/res/layout/checks_history_details_component_view.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/black"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/black">
 
     <ListView
         android:id="@+id/checksHistoryDetailsList"
