--- a/sell/src/main/res/layout/checks_history_list_item.xml
+++ b/sell/src/main/res/layout/checks_history_list_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
-    app:cardElevation="@dimen/margin_8dp"
-    android:id="@+id/root">
+    app:cardElevation="@dimen/margin_8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,18 +22,17 @@
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_12dp"
             android:layout_marginBottom="@dimen/margin_12dp"
-            android:textSize="@dimen/text_16sp"
-            android:textColor="@color/white"
             android:background="@color/black"
             android:text="@string/text_date"
-            />
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_16sp" />
 
         <kg.nurtelecom.sell.ui.fragment.history.HistoryDetailsComponentView
             android:id="@+id/itemDetailsView"
             android:layout_width="match_parent"
-            android:background="@color/black"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@color/black" />
 
     </LinearLayout>
 
