--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -9,7 +9,7 @@
 
     <kg.nurtelecom.ofd.toolbar.MainToolbar
 
-        android:id="@+id/main_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,78 +17,53 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Surname"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-
+    <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_Surname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Фамилия"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Name"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-
+    <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:hint="Имя"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/et_Surname"
+        app:layout_constraintTop_toBottomOf="@+id/et_Surname"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Middlename"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-
+    <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_Middlename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:hint="Отчество"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/et_Name"
+        app:layout_constraintTop_toBottomOf="@+id/et_Name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Phone"/>
 
-    <com.google.android.material.textfield.TextInputEditText
 
+    <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_Phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:hint="+996"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/et_Middlename"
+        app:layout_constraintTop_toBottomOf="@+id/et_Middlename"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Identification"/>
 
-    <com.google.android.material.textfield.TextInputEditText
 
+    <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_Identification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:hint="ИНН"
-        android:maxLength="14"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/et_Phone"
+        app:layout_constraintTop_toBottomOf="@+id/et_Phone"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
-
         android:id="@+id/btn_Change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
