--- a/user/src/main/res/layout/fragment_create_new_password.xml
+++ b/user/src/main/res/layout/fragment_create_new_password.xml
@@ -1,90 +1,54 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBlack">
+    android:background="@color/black">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/main_toolbar"
+
+
+    <kg.nurtelecom.ofd.edittext.EditTextField
+        android:id="@+id/et_new_password"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:padding="@dimen/app_padding"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_32dp"
+        android:inputType="textPassword"
+        app:hint_text="Новый пароль"
         app:layout_constraintEnd_toEndOf="parent"
-        app:navigationIcon="@drawable/abc_vector_test"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:layout_width="238dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_thin"
-            android:gravity="center_vertical"
-            android:text="Смена пароля"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/app_text_large"
-            android:layout_marginStart="18dp"
-            />
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <com.google.android.material.card.MaterialCardView
-
-
-        android:id="@+id/new_password_mcv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/text_input_field"
-        android:layout_marginBottom="@dimen/app_margin"
-        android:layout_marginTop="@dimen/app_margin_large"
-        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
-        app:layout_constraintStart_toStartOf="parent">
-        <EditText
-            android:id="@+id/et_new_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Новый пароль"
-            android:background="@null"
-            android:textColorHint="@color/colorGrey"
-            android:textSize="@dimen/app_text_large"
-            android:layout_marginTop="@dimen/app_margin_small"
-            android:inputType="textPassword"
-            android:gravity="center_horizontal|top"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/password_visibility_true"
-            android:layout_gravity="center_vertical|right"
-            android:layout_marginEnd="@dimen/app_margin"
-            android:clickable="true"
-            android:focusable="true"/>
-
-
-
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/new_password_mcv"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_password_rules"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
+        android:text="Должен быть не менее 6 символов, содрежать цифры, прописные или строчные буквы"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:hint="Повторите пароль"
-        android:textColorHint="@color/colorGrey"
-        android:textColor="@color/colorWhite"
-        android:id="@+id/repeat_new_password_et"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_new_password" />
+
+    <kg.nurtelecom.ofd.edittext.EditTextField
+        android:id="@+id/repeat_new_password_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/margin_16dp"
+        android:inputType="textPassword"
+        app:hint_text="Повторите пароль"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_password_rules" />
 
     <Button
+        android:id="@+id/change_password_btn"
+        style="@style/GreenButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/change_password_btn"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        android:text="Далее"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
