--- a/user/src/main/res/layout/activity_change_password.xml
+++ b/user/src/main/res/layout/activity_change_password.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView
-    android:id="@+id/container_main"
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <kg.nurtelecom.ofd.toolbar.MainToolbar
+        android:id="@+id/toolbar"
+        app:contentInsetStart="@dimen/margin_0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+<androidx.fragment.app.FragmentContainerView
+    android:layout_marginTop="55dp"
+    android:id="@+id/container_main"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kg.nurtelecom.changepassword.ui.ChangePasswordActivity">
 
 </androidx.fragment.app.FragmentContainerView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
