--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -8,63 +8,60 @@
     android:background="@color/black">
 
     <kg.nurtelecom.ofd.toolbar.MainToolbar
-
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/et_Surname"/>
+        app:layout_constraintBottom_toTopOf="@+id/et_surname"/>
 
     <kg.nurtelecom.ofd.edittext.EditTextField
-        android:id="@+id/et_Surname"
+        android:id="@+id/et_surname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/et_Name"/>
+        app:layout_constraintBottom_toTopOf="@+id/et_name"/>
 
     <kg.nurtelecom.ofd.edittext.EditTextField
-        android:id="@+id/et_Name"
+        android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/et_Surname"
+        app:layout_constraintTop_toBottomOf="@+id/et_surname"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/et_Middlename"/>
+        app:layout_constraintBottom_toTopOf="@+id/et_middlename"/>
 
     <kg.nurtelecom.ofd.edittext.EditTextField
-        android:id="@+id/et_Middlename"
+        android:id="@+id/et_middlename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/et_Name"
+        app:layout_constraintTop_toBottomOf="@+id/et_name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/et_Phone"/>
-
+        app:layout_constraintBottom_toTopOf="@+id/et_phone"/>
 
     <kg.nurtelecom.ofd.edittext.EditTextField
-        android:id="@+id/et_Phone"
+        android:id="@+id/et_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/et_Middlename"
+        app:layout_constraintTop_toBottomOf="@+id/et_middlename"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/et_Identification"/>
-
+        app:layout_constraintBottom_toTopOf="@+id/et_identification"/>
 
     <kg.nurtelecom.ofd.edittext.EditTextField
-        android:id="@+id/et_Identification"
+        android:id="@+id/et_identification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/et_Phone"
+        app:layout_constraintTop_toBottomOf="@+id/et_phone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
-        android:id="@+id/btn_Change"
+        android:id="@+id/btn_change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/GreenButtonStyle"
