--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:background">@color/black</item>
         <item name="titleTextColor">@color/textWhite</item>
         <item name="titleTextAppearance">@style/ToolbarTextAppearance</item>
+    </style>
     <style name="ButtonTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textSize">@dimen/text_14sp</item>
         <item name="android:textColor">@color/white</item>
