--- a/user/src/main/res/layout/activity_change_password.xml
+++ b/user/src/main/res/layout/activity_change_password.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
 <androidx.fragment.app.FragmentContainerView
-    android:layout_marginTop="55dp"
+    android:layout_marginTop="@dimen/margin_55dp"
     android:id="@+id/container_main"
     xmlns:tools="http://schemas.android.com/tools"
     app:layout_constraintStart_toStartOf="parent"
