--- a/sell/src/main/res/layout/price_output_fragment.xml
+++ b/sell/src/main/res/layout/price_output_fragment.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.fragment.price_output.PriceOutputFragment">
 
     <TextView
-        android:id="@+id/position_tv"
+        android:id="@+id/tv_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16dp"
@@ -23,8 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/position_tv"
-        app:layout_constraintTop_toBottomOf="@id/position_tv"
+        app:layout_constraintStart_toStartOf="@id/tv_position"
+        app:layout_constraintTop_toBottomOf="@id/tv_position"
         app:title_text="@string/price" />
 
     <kg.nurtelecom.ofd.cell.InfoCardCellView
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/check_btn"
+        android:id="@+id/btn_check"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_8dp"
