--- a/sell/src/main/res/layout/add_product_fragment.xml
+++ b/sell/src/main/res/layout/add_product_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@android:color/black"
     tools:context=".ui.fragment.add_product.AddProductFragment">
 
     <Button
@@ -16,7 +16,7 @@
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginEnd="@dimen/margin_8dp"
         android:text="@string/product_not_from_list"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +26,7 @@
         android:layout_width="@dimen/margin_0dp"
         android:layout_height="@dimen/margin_0dp"
         android:layout_marginTop="@dimen/margin_16dp"
+        android:padding="@dimen/margin_8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
