--- a/sell/src/main/res/layout/bottom_sheet_fragment.xml
+++ b/sell/src/main/res/layout/bottom_sheet_fragment.xml
@@ -18,7 +18,7 @@
         android:padding="@dimen/margin_16dp">
 
         <TextView
-            android:id="@+id/sell_main_menu_tv_closing"
+            android:id="@+id/tv_menu_closing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_44dp"
@@ -31,7 +31,7 @@
             android:textSize="@dimen/text_20sp" />
 
         <TextView
-            android:id="@+id/sell_main_menu_tv_closing_description"
+            android:id="@+id/tv_menu_closing_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_16dp"
@@ -46,7 +46,7 @@
             android:textSize="@dimen/text_20sp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/sell_main_menu_item_cancel"
+            android:id="@+id/btn_menu_item_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_16dp"
@@ -59,7 +59,7 @@
             android:textSize="@dimen/text_14sp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/sell_main_menu_item_close"
+            android:id="@+id/tv_menu_item_close"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_16dp"
