--- a/sell/src/main/res/layout/checks_history_recycle_view.xml
+++ b/sell/src/main/res/layout/checks_history_recycle_view.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/history_recycler_view"
+        android:id="@+id/rv_history"
         android:layout_width="@dimen/size_0dp"
         android:layout_height="@dimen/size_0dp"
         android:background="@color/black"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
