--- a/sell/src/main/res/layout/checks_history_detail_fragment.xml
+++ b/sell/src/main/res/layout/checks_history_detail_fragment.xml
@@ -1,10 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <kg.nurtelecom.ofd.edittext.EditTextField
+            android:id="@+id/field_one"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:inputType="text"
+            />
+
+        <kg.nurtelecom.ofd.edittext.EditTextField
+            android:id="@+id/field_two"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:inputType="text"
+            />
+
+        <kg.nurtelecom.ofd.edittext.EditTextField
+            android:id="@+id/field_three"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:inputType="text"
+            />
+
+        <kg.nurtelecom.ofd.edittext.EditTextField
+            android:id="@+id/field_four"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:inputType="text"
+            />
+
+        <kg.nurtelecom.ofd.edittext.EditTextField
+            android:id="@+id/field_five"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:inputType="text"
+            />
+
+        <kg.nurtelecom.ofd.edittext.EditTextField
+            android:id="@+id/field_six"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:descendantFocusability="blocksDescendants"
+            android:inputType="text"
+            />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_check_return"
