--- a/sell/src/main/res/layout/activity_history.xml
+++ b/sell/src/main/res/layout/activity_history.xml
@@ -19,8 +19,8 @@
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/size_0dp"
+        android:layout_height="@dimen/size_0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -44,7 +44,7 @@
             android:fitsSystemWindows="true"
             android:focusable="false"
             app:headerLayout="@layout/side_menu_sell_main"
-            app:itemIconTint="#fff" />
+            app:itemIconTint="@color/white" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
