--- a/sell/src/main/res/layout/activity_history.xml
+++ b/sell/src/main/res/layout/activity_history.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tb_history"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ToolbarColoredBackArrow"
         android:background="@color/black"
         android:fitsSystemWindows="true"
         app:layout_constraintEnd_toEndOf="parent"
