--- a/sell/src/main/res/menu/sell_menu.xml
+++ b/sell/src/main/res/menu/sell_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/ic_search"
-        android:title="Поиск"
+        android:title="@string/text_search"
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
