--- a/sell/src/main/res/layout/dialog_view.xml
+++ b/sell/src/main/res/layout/dialog_view.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="@dimen/size_24dp"
         android:layout_marginTop="@dimen/size_24dp"
         android:textColor="@color/black"
+        android:textSize="@dimen/text_20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Фискальный режим" />
@@ -25,6 +26,7 @@
         android:layout_marginStart="@dimen/size_24dp"
         android:layout_marginTop="@dimen/margin_12dp"
         android:layout_marginEnd="@dimen/size_24dp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_regime"
